force-app/main/default/objects/Diagram__c/Diagram__c.object-meta.xml
<CustomObject>
    <label>Diagram</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diagrams</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>