force-app/main/default/objects/Diagram__c/fields/DiagramName__c.field-meta.xml
<CustomField>
    <fullName>DiagramName__c</fullName>
    <label>Diagram Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>