force-app/main/default/objects/Diagram__c/fields/Documentation__c.field-meta.xml
<CustomField>
    <fullName>Documentation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Documentation</label>
    <referenceTo>Documentation__c</referenceTo>
    <relationshipLabel>Diagrams</relationshipLabel>
    <relationshipName>Diagrams</relationshipName>
    <type>Lookup</type>
</CustomField>