force-app/main/default/objects/Diagram__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>Entity Relationship</fullName>
            </value>
            <value>
                <fullName>Flowchart</fullName>
            </value>
            <value>
                <fullName>Sequence</fullName>
            </value>
            <value>
                <fullName>Use Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>